--- a/SerilogDemoApp/Views/Home/Index.cshtml
+++ b/SerilogDemoApp/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+<h1>Welcome to Serilog Demo!</h1>
+
+<p>This is a demo application showing how Serilog works in .NET Core 8 MVC.</p>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
